--- a/src/ui/buttons/link-buttons/link-buttons.scss
+++ b/src/ui/buttons/link-buttons/link-buttons.scss
@@ -1,8 +1,7 @@
 @import '/src/assets/scss/colors.scss';
+@import '../buttons.scss';
 
 .active {
     background-color: $purple_secondary;
     color: white;
-    border-radius: 30px;
-    padding: 15px 30px;
 }
